// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli Build without entry argument 1`] = `
[Error: Command failed: node cli.js build
cli.js build <entry> <target>

Bundle Lambda functions

Positionals:
  entry   Entry file or directory of functions               [string] [required]
  target  Target directory for bundled functions             [string] [required]

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 0, need at least 2
]
`;

exports[`cli Build without target argument 1`] = `
[Error: Command failed: node cli.js build test/fixtures
cli.js build <entry> <target>

Bundle Lambda functions

Positionals:
  entry   Entry file or directory of functions               [string] [required]
  target  Target directory for bundled functions             [string] [required]

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 1, need at least 2
]
`;

exports[`cli Serve without entry argument 1`] = `
[Error: Command failed: node cli.js serve
cli.js serve <entry>

Lambda Development Server

Positionals:
  entry  Entry file or directory of Lambda functions                  [required]

Options:
  --help          Show help                                            [boolean]
  --version       Show version number                                  [boolean]
  --node, -n      Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]
  --basePath, -b  Base pathname prepended to function filenames
                                                         [string] [default: "/"]
  --port, -p      Port for development server           [number] [default: 9000]

Not enough non-option arguments: got 0, need at least 1
]
`;

exports[`cli Without arguments 1`] = `
[Error: Command failed: node cli.js
cli.js <command>

Commands:
  cli.js serve <entry>           Lambda Development Server
  cli.js build <entry> <target>  Bundle Lambda functions

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 0, need at least 1
]
`;
